--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>roger</title>
+  <title>anelya</title>
  </head>
  <body>
   <p><img src="/Users/mjada/Desktop/Nyan_cat_250px_frame.png" alt="Nyan"></p>
