--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>anelya</title>
  </head>
  <body>
-  <p><img src="/home/anelya/roger/Nyan_cat_250px_frame.png" alt="Nyan"></p>
+  <p><img src="Nyan_cat_250px_frame.png" alt="Nyan"></p>
  </body>
 </html>
