--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>anelya</title>
+  <title>nyancata</title>
  </head>
  <body>
-  <p><img src="/Users/mjada/Desktop/Nyan_cat_250px_frame.png" alt="Nyan"></p>
+  <p><img src="Nyan_cat_250px_frame.png" alt="Nyan"></p>
  </body>
 </html>
