--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>nyancata</title>
+  <title>mjada</title>
  </head>
  <body>
   <p><img src="Nyan_cat_250px_frame.png" alt="Nyan"></p>
