--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>mjada</title>
  </head>
  <body>
-  <p><img src="Nyan_cat_250px_frame.png" alt="Nyan"></p>
+  <p><img src="Nyan_cat_250px_frame.png" alt="Nyan" width="150" heigh="90"></p>
  </body>
 </html>
